--- a/galeria.html
+++ b/galeria.html
@@ -16,10 +16,11 @@
            <li><a href="sobre.html">Sobre</a></li>
            <li><a href="galeria.html">Galeria</a></li>
           </ul>
-            
         </nav>
        </header>
+       <section>
        <H3>Galeria de imagens do jogo</H3>
+       <Br>
        <h4>Mapa do jogo</h4>
        <Br></Br>
        <div id="dov">
@@ -35,6 +36,7 @@
      </div>
       <br>
       <h4>Dentro do jogo podemos caçar 16 animais considerado lendários, entre eles: Urso-cinzento Lendário Bharati, Lobo Lendário, Javali Lendário, Alce Lendário, Carneiro-selvagem Lendário, Bisão Branco Lendário, Castor Lendário,  Cervo Lendário, Coiote Lendário, Uapiti Lendário, Raposa Lendária, . Jacaré Gigante Lendário, Bisão Lendário Tatanka, Antilocapra Lendária, Suçuarana Lendária, Pantera Lendária Giaguaro.</h4>
+    </section>
     
 </body>
 </html>
